--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p>Ce dashboard analyse les demandes et les attributions de logement en Champagne-Ardenne. </p>
             <!-- Lien sur l'image du dashboard 2 -->
             <a href="https://app.powerbi.com/view?r=eyJrIjoiODhlZWZhYTktNDcyNS00NjY5LTg2NjYtNjM2ZTUyNzM2Y2VkIiwidCI6IjllNGY4NTFiLTg4ZTItNDNhYy05OGJmLTA0ZDczMGQ4OTcwNyIsImMiOjh9" target="_blank">
-                <img src="Demandes-et-attributions.jpg" alt="demandes et attributions de logement" class="dashboard-thumbnail">
+                <img src="Demandes-et-attributions.jpg" alt="Demandes et attributions de logement" class="dashboard-thumbnail">
             </a>
         </section>
     </section>
